[tool.poetry]
authors = ["ramilabd <ramsmart@mail.ru>"]
description = ""
name = "file_handler"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "3.2"
python = "^3.10"
django-cors-headers = "^3.11.0"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
commitizen = "^2.20.5"
pre-commit = "^2.17.0"
wemake-python-styleguide = "^0.16.0"

[tool.commitizen]
name = "cz_conventional_commits"
style = [
  ["qmark", "fg:#ff9d00 bold"],
  ["question", "bold"],
  ["answer", "fg:#ff9d00 bold"],
  ["pointer", "fg:#ff9d00 bold"],
  ["highlighted", "fg:#ff9d00 bold"],
  ["selected", "fg:#cc5454"],
  ["separator", "fg:#cc5454"],
  ["instruction", ""],
  ["text", ""],
  ["disabled", "fg:#858585 italic"],
]
tag_format = "$version"
version = "0.0.1"
version_files = [
  "src/__version__.py",
  "pyproject.toml:version",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
